fixed align center buttons in css on small displays

--- a/css/style.css
+++ b/css/style.css
@@ -164,4 +164,8 @@ body {
         flex-wrap: wrap;
         transition: 1s;
     }
+
+    .js-buttons {
+        text-align: center;
+    }
 }
